--- a/pw8105_hw3_svs2130.md
+++ b/pw8105_hw3_svs2130.md
@@ -20,14 +20,19 @@ library(tidyverse)
 
 ``` r
 library(tibble)
+library(viridis)
+```
+
+    ## Loading required package: viridisLite
+
+``` r
+library(p8105.datasets)
 ```
 
 # Problem 1
 
 ``` r
-library(p8105.datasets)
 data("instacart")
-
 n_order_per_hour_of_day = 
   instacart %>% 
   group_by(order_hour_of_day) %>%
@@ -85,10 +90,14 @@ instacart %>%
 
     ## Adding missing grouping variables: `aisle`
 
-|   aisle\_id | aisle               |                                                                                                                                                                                                              n\_orders\_per\_aisle |
-| ----------: | :------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
-|          83 | fresh vegetables    |                                                                                                                                                                                                                             150609 |
-| There are 1 | 34 aisles. The tabl | e was grouped with aisle and aisle\_id just to make sure that the aisle name is mentioned in the table, elsewise, each aisle has a unique aisle\_id and hence just taking either one of them for grouping won’t change the answer. |
+| aisle\_id | aisle            | n\_orders\_per\_aisle |
+| --------: | :--------------- | --------------------: |
+|        83 | fresh vegetables |                150609 |
+
+There are 134 aisles. The table was grouped with aisle and aisle\_id
+just to make sure that the aisle name is mentioned in the table,
+elsewise, each aisle has a unique aisle\_id and hence just taking either
+one of them for grouping won’t change the answer.
 
 Since each order\_id is unique to a single order, summarising along the
 group gives us the number of orders per aisle.
@@ -385,7 +394,7 @@ accel = read_csv("./data/accel_data.csv") %>%
 
     ## See spec(...) for full column specifications.
 
-### Here is a short description of the dataset:
+### Description of the dataset:
 
   - There are **50400 observations** and **6 variables**.
   - Following are the vatiables in the dataset: **week, day\_id, day,
@@ -468,7 +477,7 @@ accel %>%
     theme(legend.position = "bottom") + 
   scale_x_continuous(breaks = c(0:24)) +
   scale_y_continuous(
-    breaks = c(50000, 100000, 150000, 200000, 250000)
+    breaks = c(50000, 150000, 250000)
   ) + 
   labs(
     x = "Hour",
