uploading the md file

--- a/pw8105_hw3_svs2130.md
+++ b/pw8105_hw3_svs2130.md
@@ -135,7 +135,7 @@ instacart %>%
   summarise(n_items = n()) %>% 
   filter(n_items > 10000) %>% 
   arrange(desc(n_items))%>%
-  ggplot(aes(x = aisle, y = n_items)) +
+  ggplot(aes(x = reorder(aisle, n_items), y = n_items)) +
   geom_point() +
   scale_y_continuous(breaks = c(10000, 50000, 100000, 150000),
                      limits = c(10000, 200000), 
