--- a/pw8105_hw3_svs2130.md
+++ b/pw8105_hw3_svs2130.md
@@ -397,7 +397,7 @@ accel = read_csv("./data/accel_data.csv") %>%
 ### Description of the dataset:
 
   - There are **50400 observations** and **6 variables**.
-  - Following are the vatiables in the dataset: **week, day\_id, day,
+  - Following are the variables in the dataset: **week, day\_id, day,
     minute, activity, day\_type**.
 
 ## Problem 3\_2
@@ -896,7 +896,7 @@ accel %>%
     ##  - attr(*, "complete")= logi TRUE
     ##  - attr(*, "validate")= logi TRUE
 
-We plotted a graph of the amoung of activity for each day of the week
+We plotted a graph of the among of activity for each day of the week
 over 24 hours of time. We can observe that the peak activity is on
 fridays between 19th and 21st hour. The activity is least during the 0th
 to 4th hour in the morning and gradually increases.
